前后端联调

--- a/package.json
+++ b/package.json
@@ -125,10 +125,20 @@
         {
           "legacy": true
         }
+      ],
+      [
+        "import",
+        {
+          "libraryName": "antd-mobile",
+          "style": "css"
+        }
       ]
     ]
   },
   "devDependencies": {
+    "antd-mobile": "^2.2.6",
+    "babel-plugin-import": "^1.11.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5"
-  }
+  },
+  "proxy": "http://localhost:8081"
 }
