--- a/package.json
+++ b/package.json
@@ -130,5 +130,6 @@
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5"
-  }
+  },
+  "proxy":"http://localhost:8081"
 }
